@@ -2,14 +2,18 @@ PREFIX := /usr/local
 
 CXXSTD := c++11
 
-#CXXFLAGS := -g -O3
-CXXFLAGS  := -O3
+ifndef CXXFLAGS
+  CXXFLAGS := -O3
+  ifdef DEBUG
+	ifneq ($(DEBUG),0)
+	  CXXFLAGS += -g
+	endif
+  endif
+endif
 
-CPPFLAGS  :=
+# CPPFLAGS  :=
 
-# TODO: This needs protection against there being no ROOT installation (which can be fine)
-ROOTINC := $(wildcard $(shell root-config --incdir) )
-ROOTLIB := $(wildcard $(shell root-config --libdir) )
+HAVE_ROOT := $(shell which root-config)
 
 LIBHEADERS := $(wildcard include/Professor/*.h)
 LIBSOURCES := $(wildcard src/*.cc)
@@ -17,7 +21,7 @@ LIBOBJECTS := $(patsubst %,obj/%.o, ParamPoints Ipol ProfMaster)
 TESTPROGS  := test/testParamPoints test/testIpol test/testMaster
 CYTHONSOURCES := $(wildcard pyext/professor2/*.pxd) $(wildcard pyext/professor2/*.pyx)
 
-.PHONY := all lib pyext tests cxxtests pytests check icheck clean
+.PHONY := all lib pyext tests cxxtests pytests check icheck clean root
 
 
 all: lib pyext tests
@@ -50,9 +54,10 @@ cxxtests: $(TESTPROGS)
 test/%: test/%.cc $(LIBHEADERS) lib
 	g++ -std=$(CXXSTD) -Iinclude $(CPPFLAGS) $(CXXFLAGS) $< -Llib -lProfessor2 -o $@
 
-root: src/testRoot.cc  $(LIBHEADERS) lib
-	g++ -std=$(CXXSTD) $(CPPFLAGS) $(CXXFLAGS) $< -Iinclude -I$(ROOTINC) -L$(ROOTLIB) -lHist -lCore -Llib -lProfessor2 -o test/test$@
-
+ifdef $(HAVE_ROOT)
+root: src/testRoot.cc $(LIBHEADERS) lib
+	g++ -std=$(CXXSTD) $(CPPFLAGS) $(CXXFLAGS) $< -Iinclude `root-config --cflags --libs` -Llib -lProfessor2 -o test/test$@
+endif
 
 pytests: pyext
 	@true
